--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -157,9 +157,7 @@ body {
   }
 }
 
-.article-list,
-.search-list,
-.bytag-list {
+.article-list {
   margin-right: 340px;
   background-color: #fff;
   padding: 10px 15px 9999px;
@@ -211,7 +209,7 @@ body {
   }
 }
 
-.search-list {
+.article-list {
   .tips {
     font-size: 20px;
     text-align: center;
