--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -272,6 +272,7 @@ button {
       padding: 10px 0;
     }
     li {
+      cursor: pointer;
       a {
         display: block;
         padding: 10px 20px;
