--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -101,6 +101,7 @@ button {
       font-size: 40px;
       font-weight: bold;
       padding: 50px 0 30px 18px;
+      cursor: pointer;
     }
     .intro {
       font-size: 25px;
