--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -89,6 +89,7 @@ button {
   border: 1px solid transparent;
 }
 
+
 /* golbal header */
 
 .header {
@@ -97,14 +98,15 @@ button {
   .info {
     margin: 0 auto;
     color: #FFF;
+    height: 184px;
     .nickname {
-      font-size: 40px;
+      font-size: 35px;
       font-weight: bold;
       padding: 50px 0 30px 18px;
       cursor: pointer;
     }
     .intro {
-      font-size: 25px;
+      font-size: 20px;
       padding: 0 0 30px 150px;
     }
   }
@@ -131,9 +133,11 @@ button {
       margin-right: 18px;
       border: none;
       background-color: #404448;
+      color: #C8C9CA;
     }
   }
 }
+
 
 
 /* article list layout */
@@ -194,7 +198,7 @@ button {
     }
     span {
       display: inline-block;
-      padding:10px 15px;
+      padding: 10px 15px;
       cursor: pointer;
     }
   }
@@ -265,6 +269,7 @@ button {
     padding: 0 18px;
   }
 }
+
 
 
 /* admin template layout */
@@ -461,6 +466,7 @@ button {
     }
   }
 }
+
 
 
 /* @media screen*/
