--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -83,7 +83,7 @@ input {
 }
 
 button {
-  padding: 8px 15px;
+  padding: 8px 15px !important;
   border-radius: 5px;
   cursor: pointer;
   border: 1px solid transparent;
