调整头部样式

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -96,6 +96,7 @@ button {
 .header {
   height: 240px;
   background-color: $black-dark;
+  background-image: url('~/assets/img/night.gif');
   .info {
     margin: 0 auto;
     color: #FFF;
