--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -91,6 +91,7 @@ button {
 }
 
 
+
 /* golbal header */
 
 .header {
@@ -142,11 +143,13 @@ button {
 
 
 
+
 /* article list layout */
 
 .wrap {
   display: flex;
   margin: 0 auto 30px;
+  background-color: #fff;
 }
 
 .article-list {
@@ -205,21 +208,22 @@ button {
     }
   }
 }
+
 .category-list {
-	flex: 1;
+  flex: 1;
   background-color: #fff;
   padding: 15px 0;
-	.list li {
-		display: inline-block;
-		a {
-			font-size: 18px;
-			padding: 10px 20px;
-		}
+  .list li {
+    display: inline-block;
+    a {
+      font-size: 18px;
+      padding: 10px 20px;
+    }
   }
   .search-box {
     text-align: center;
     h3 {
-    margin-top: 40px;
+      margin-top: 40px;
     }
     input[type="search"] {
       display: inline-block;
@@ -231,6 +235,7 @@ button {
     }
   }
 }
+
 .aside {
   width: 230px;
   background-color: #F8F8F8;
@@ -297,6 +302,7 @@ button {
     padding: 0 18px;
   }
 }
+
 
 
 
@@ -505,6 +511,15 @@ button {
   }
 }
 
+.page-enter-active,
+.page-leave-active {
+  transition: opacity .5s
+}
+
+.page-enter,
+.page-leave-active {
+  opacity: 0
+}
 
 
 /* @media screen*/
